force-app/main/default/objects/DaScoopComposer__Tracked_Message__c/DaScoopComposer__Tracked_Message__c.object-meta.xml
<CustomObject>
    <label>Tracked Message</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tracked Messages</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>