force-app/main/default/objects/DaScoopComposer__Tracked_Message__c/fields/DaScoopComposer__Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Date_Sent__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>is the date/time on which the email was sent.</inlineHelpText>
    <label>Date Sent</label>
    <type>DateTime</type>
</CustomField>