force-app/main/default/objects/DaScoopComposer__Tracked_Message__c/fields/DaScoopComposer__Email_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Email_Message_Id__c</fullName>
    <description>The message id of this email on the sending user&apos;s email service. This field is used to create a link to the email message in the browser.</description>
    <inlineHelpText>The message id of this email on the sending user&apos;s email service (according ti the rfc822 header field &quot;message-id&quot;). This field is used to create a link to the email message in the browser.</inlineHelpText>
    <label>Email Message Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>