force-app/main/default/objects/DaScoopComposer__Tracked_Message__c/fields/DaScoopComposer__Email_Service__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Email_Service__c</fullName>
    <defaultValue>&quot;gmail&quot;</defaultValue>
    <description>Name of the Email Service from which this message was sent.</description>
    <inlineHelpText>Name of the Email Service from which this message was sent.</inlineHelpText>
    <label>Email Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>