force-app/main/default/objects/DaScoopComposer__Tracked_Message__c/fields/DaScoopComposer__Gmail_Id__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Gmail_Id__c</fullName>
    <description>The Gmail Thread Id used to generate a link back to the original message in Gmail.</description>
    <inlineHelpText>Only the sending user can view emails with this link when logged into the sending email account.</inlineHelpText>
    <label>Gmail Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>