force-app/main/default/objects/DaScoopComposer__Tracked_Message__c/fields/DaScoopComposer__Main_Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Main_Recipient_Email__c</fullName>
    <inlineHelpText>is the email address of the recipient. If the email was sent to multiple recipients this field is blank.</inlineHelpText>
    <label>Main Recipient Email</label>
    <type>Email</type>
</CustomField>