force-app/main/default/objects/DaScoopComposer__Tracked_Message__c/fields/DaScoopComposer__Message__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Message__c</fullName>
    <inlineHelpText>is the plain text version of the email body. This email has also be appended to the activity history of all the recipients (leads and contacts).</inlineHelpText>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>