force-app/main/default/objects/DaScoopComposer__Tracked_Message__c/fields/DaScoopComposer__Message_Id__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Message_Id__c</fullName>
    <inlineHelpText>is the time stamp ID of the tracked message.</inlineHelpText>
    <label>Message Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>