force-app/main/default/objects/DaScoopComposer__Tracked_Message__c/fields/DaScoopComposer__Reply_Recorded__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Reply_Recorded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>indicates whether or not at least one reply to the tracked message was recorded</inlineHelpText>
    <label>Reply Recorded</label>
    <type>Checkbox</type>
</CustomField>