force-app/main/default/objects/DaScoopComposer__Tracked_Message__c/fields/DaScoopComposer__Sender__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Sender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Indicates the user who sent the email. This user is identified by trying to match a user&apos;s email address with the the email sender&apos;s email address (which sometimes can lead to ambiguity).</inlineHelpText>
    <label>Sender</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tracked_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>