force-app/main/default/objects/DaScoopComposer__Tracked_Message__c/fields/DaScoopComposer__Template_Id__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Template_Id__c</fullName>
    <inlineHelpText>is the ID of the template that was used sending this tracked message. If no template was used, this field is blank.</inlineHelpText>
    <label>Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>