force-app/main/default/objects/DaScoopComposer__Tracked_Message__c/fields/DaScoopComposer__Template_Used__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Template_Used__c</fullName>
    <formula>IF(OR(ISNULL(DaScoopComposer__Template_Id__c),DaScoopComposer__Template_Id__c  = &quot;&quot;),
&quot;&quot;,
HYPERLINK(&quot;/&quot; &amp; DaScoopComposer__Template_Id__c, DaScoopComposer__Template_Folder__c &amp; &quot;/&quot; &amp; DaScoopComposer__Template__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>points to the template that was used when this email was sent. If no template was used this field is blank.</inlineHelpText>
    <label>Template Used</label>
    <type>Text</type>
</CustomField>