force-app/main/default/objects/DaScoopComposer__Tracked_Message__c/listViews/DaScoopComposer__All.listView-meta.xml
<ListView>
    <fullName>DaScoopComposer__All</fullName>
    <columns>NAME</columns>
    <columns>DaScoopComposer__Sender__c</columns>
    <columns>DaScoopComposer__Main_Recipient_Email__c</columns>
    <columns>DaScoopComposer__Date_Sent__c</columns>
    <columns>DaScoopComposer__Times_Opened__c</columns>
    <columns>DaScoopComposer__Template_Used__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Tracked Messages</label>
</ListView>